Fix time slot time label alignment
The time gutter time label (e.g. 14.00) was being aligned by translating
the cell itself. This made the label misaligned when changing vertical
window sizes which resized the window. Fixed by moving the text span
itself by -50%

--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -94,9 +94,13 @@ a {
   }
 
   .rbc-time-slot {
-    transform: translateY(-25%);
     font-size: var(--font-size-tiny);
     color: var(--grayscale-dark-text);
+  }
+
+  .rbc-time-slot .rbc-label {
+    display: block;
+    transform: translateY(-50%);
   }
 }
 
